sites/default/kubernetes/objects/deploy-postgres.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: default
  labels:
    service: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      service: postgres
  template:
    metadata:
      labels:
        service: postgres
    spec:
      containers:
        - name: postgres
          image: docker.io/alvistack/postgres-16:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 511M
            limits:
              memory: 512M
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: var-lib-postgresql-data
      volumes:
        - name: var-lib-postgresql-data
          hostPath:
            path: /vagrant/sites/default/kubernetes/persistentvolumes/var-lib-postgresql-data
            type: DirectoryOrCreate
