sites/default/kubernetes/objects/deploy-solr.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solr
  namespace: default
  labels:
    service: solr
spec:
  replicas: 1
  selector:
    matchLabels:
      service: solr
  template:
    metadata:
      labels:
        service: solr
    spec:
      containers:
        - name: solr
          image: docker.io/solr:9.8
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 256M
            limits:
              memory: 1024M
          ports:
            - containerPort: 8983
          args:
            - /bin/sh
            - -c 
            - solr-precreate default
          volumeMounts:
            - mountPath: /opt/solr/server/solr/configsets/_default/conf
              name: opt-solr-server-solr-configsets-default-conf
            - mountPath: /var/solr
              name: var-solr
      volumes:
        - name: opt-solr-server-solr-configsets-default-conf
          hostPath:
            path: /vagrant/modules/contrib/search_api_solr/jump-start/solr9/config-set
            type: DirectoryOrCreate
        - name: var-solr
          hostPath:
            path: /vagrant/sites/default/kubernetes/persistentvolumes/var-solr
            type: DirectoryOrCreate
