sites/default/kubernetes/objects/svc-httpd.yml
---
apiVersion: v1
kind: Service
metadata:
  name: httpd
  namespace: default
  labels:
    service: httpd
spec:
  ports:
    - name: http
      port: 80
  selector:
    service: httpd
  sessionAffinity: ClientIP
