sites/default/kubernetes/objects/svc-redis.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: default
  labels:
    service: redis
spec:
  ports:
    - name: redis
      port: 6379
  selector:
    service: redis
  sessionAffinity: ClientIP
