sites/default/kubernetes/objects/svc-sshd.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sshd
  namespace: default
  labels:
    service: sshd
spec:
  ports:
    - name: sshd
      port: 22
  selector:
    service: sshd
  type: NodePort
